--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -109,10 +109,10 @@ body {
 }
 img {
   max-width: 100%;
-  height: auto;
+  max-height: 200%;
   position: absolute;
   margin: auto;
-  top: -100%;
+  top: -125%;
   bottom: 100%;
   left: 0;
   right: 0;
