--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -112,7 +112,7 @@ img {
   max-height: 200%;
   position: absolute;
   margin: auto;
-  top: -125%;
+  top: -90%;
   bottom: 100%;
   left: 0;
   right: 0;
@@ -128,19 +128,25 @@ img {
 h1 {
   text-transform: uppercase;
   font-family: EXAN;
-  font-size: 85px;
+  font-size: 100px;
   font-weight: 700;
   letter-spacing: 0.015em;
   color: #fff;
 }
 h1::after {
   content: '';
-  width: 80px;
+  width: 100px;
   display: block;
   background: #fff;
   height: 10px;
   margin: 30px auto;
   line-height: 1.1;
+}
+h2 {
+  font-family: EXAN;
+  font-size: 40px;
+  letter-spacing: 0.01em;
+  color: #fff;
 }
 mainicon {
   background-image: url(../images/main/test.svg);
@@ -148,13 +154,13 @@ mainicon {
 p {
   margin: 0 0 30px 0;
   font-family: ELIXIA;
-  font-size: 40px;
+  font-size: 100px;
 }
 a {
   color: #fff;
   font-weight: bold;
   text-decoration: none;
-  font-size: 100px;
+
 }
 a:hover {
   text-decoration: underline;
@@ -182,7 +188,13 @@ a:hover {
 
 @media only screen and (max-width: 1000px) {
   h1 {
-    font-size: 70px;
+    font-size: 60px;
+  }
+  p {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 40px;
   }
 }
 
@@ -192,6 +204,12 @@ a:hover {
   }
   h1::after {
     height: 8px;
+  }
+  p {
+    font-size: 48px;
+  }
+  h2 {
+    font-size: 20px;
   }
 }
 
@@ -206,10 +224,13 @@ a:hover {
     height: 6px;
   }
   p {
-    font-size: 24px;
+    font-size: 30px;
   }
   .btn {
     font-size: 16px;
+  }
+  h2 {
+    font-size: 10px;
   }
 }
 
@@ -219,6 +240,12 @@ a:hover {
   }
   h1::after {
     height: 4px;
+  }
+  p {
+    font-size: 28px;
+  }
+  h2 {
+    font-size: 5px;
   }
 }
 
